--- a/experiment10.html
+++ b/experiment10.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E Commerce navbar</title>
+     <link rel="stylesheet" href="style_10.css" link="stlesheet" />
 </head>
 <body>
      <nav class="navbar">
